# headsurgeon

./: .gitmodules  CMakeLists.txt  appveyor.yml  conanfile.txt  packages.manifest  premake5.lua  repositories.manifest
cli/: main.cpp
gui/: main.cpp  main.h
hsdmi/: manifest
hsdmi/hsdmi/: buildfile  main.cpp
hsgui/: buildfile  dmi_model.cpp  hsgui.cpp  hsgui.hpp  manifest  worker.hpp
hsgui/hsgui/: buildfile  dmi_model.cpp  dmi_model.hpp  hsgui.cpp  hsgui.hpp  worker.cpp
libheadsurgeon/: dmi.cpp  dmi.hpp  export.hpp  filesystem.hpp  manifest
libheadsurgeon/codecs/: png.cpp  webp.hpp
libheadsurgeon/libheadsurgeon/: buildfile  dmi.cpp  dmi.hpp  errors.cpp  errors.hpp  version.hpp.in
libheadsurgeon/libheadsurgeon/codecs/: file.cpp  png.cpp  png.hpp  webp.cpp  webp.hpp
pkg/windows/: license.rtf
premake/: libpng.lua  libwebp.lua  wx.lua
src/: dmi.cpp  dmi.h  errors.cpp  errors.h
src/codecs/: file.cpp  png.cpp  png.h  webp.cpp  webp.h
